added some meta tags

--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
   <head>
     <meta charset="UTF-8" />
 
+    <title>RFB Law</title>
+    <meta name="description" content="Law Firm of Reuben Fuller-Bennett">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://rfblaw.nyc">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="RFB Law">
+    <meta property="og:description" content="Law Firm of Reuben Fuller-Bennett">
+    <meta property="og:image" content="https://github.com/maemay85/projectRFB/blob/main/src/assets/headshot.png?raw=true">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,500;0,600;0,800;1,400;1,500;1,600;1,800&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RFB</title>
+
   </head>
   <body>
     <div id="root"></div>
